snapshots/syntax/statements/objects/events/raiseevent_statement_preserves_whitespace.snap
---
source: src/syntax/statements/objects/events.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: RaiseEventStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: RaiseEventKeyword
                  text: RaiseEvent
                - kind: Whitespace
                  text: "   "
                - kind: Identifier
                  text: EventName
                - kind: Whitespace
                  text: "   "
                - kind: LeftParenthesis
                  text: (
                - kind: Whitespace
                  text: "   "
                - kind: Identifier
                  text: arg1
                - kind: Whitespace
                  text: "   "
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: "   "
                - kind: Identifier
                  text: arg2
                - kind: Whitespace
                  text: "   "
                - kind: RightParenthesis
                  text: )
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
