snapshots/syntax/statements/objects/events/raiseevent_statement_with_constants.snap
---
source: src/syntax/statements/objects/events.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: RaiseEventStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: RaiseEventKeyword
                  text: RaiseEvent
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: StatusChanged
                - kind: LeftParenthesis
                  text: (
                - kind: Identifier
                  text: STATUS_ACTIVE
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: TrueKeyword
                  text: "True"
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: IntegerLiteral
                  text: "100"
                - kind: RightParenthesis
                  text: )
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
